[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/SleepInt.gd" type="Script" id=1]
[ext_resource path="res://Assets/items/close.png" type="Texture" id=2]
[ext_resource path="res://Assets/items/close_hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/CompassPro.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[node name="Sleep" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -7.0
margin_top = -5.0
margin_right = 648.0
margin_bottom = 376.0
color = Color( 0, 0, 0, 0.627451 )

[node name="SleepNow" type="Button" parent="."]
margin_left = 225.0
margin_top = 135.0
margin_right = 411.0
margin_bottom = 179.0
custom_colors/font_color_hover = Color( 0.345098, 0.823529, 0.0980392, 1 )
custom_fonts/font = SubResource( 1 )
text = "Dormir agora"
flat = true

[node name="SleepAfter" type="Button" parent="."]
margin_left = 225.0
margin_top = 197.0
margin_right = 411.0
margin_bottom = 241.0
custom_colors/font_color_hover = Color( 0.345098, 0.823529, 0.0980392, 1 )
custom_fonts/font = SubResource( 2 )
text = "Voltar depois"
flat = true

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 588.0
margin_top = 38.0
margin_right = 613.0
margin_bottom = 67.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[connection signal="pressed" from="SleepNow" to="." method="_on_SleepNow_pressed"]
[connection signal="pressed" from="SleepAfter" to="." method="_on_SleepAfter_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
